--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -3,7 +3,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container">
   <br>
   <br>
   <header class="jumbotron">
