added Region class with one to many relationships with Users and Tournaments to models

--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -49,6 +49,7 @@
     <div class="panel panel-default">
     <div class="panel-heading">
       <h2><b>{{tag1}} vs {{tag2}}</b></h2>
+      {{user1}}
       <h2><b>{{user1_set_win_count}} - {{user2_set_win_count}}</b></h2>
     </div>
     <div class="panel-body">
