--- a/app/templates/browse_users.html
+++ b/app/templates/browse_users.html
@@ -13,6 +13,7 @@
         <th class="text-center"><h4><b>User</b></h4></th>
 	      <th class="text-center"><h4><b>Region</b></h4></th>
 	      <th class="text-center"><h4><b>Main</b></h4></th>
+	      <th class="text-center"><h4><b>Rating</b><h4></th>
 	      <!-- <th><h4><b>Secondaries</b></h4></th> -->
 	    </tr>
 	  </thead>
