--- a/app/templates/user_display.html
+++ b/app/templates/user_display.html
@@ -1,9 +1,10 @@
-<!-- prints User representation in HTML given a User object, with route hyperlink to /user (profile), /region, /character -->
+<!-- prints User representation in HTML given a User object, with route hyperlink to /user (profile), /region, /character. Used primarily in /browse_users -->
+
 <tr>
-    <td class="col-sm-4 text-center horizontal-overflow">
+    <td class="col-sm-3 text-center horizontal-overflow">
         <b><a href="{{ url_for("user", tag=user.tag) }}">{{ user.tag }}</a></b>
     </td>
-    <td class="col-sm-4 text-center">
+    <td class="col-sm-3 text-center">
         {% if user.region %}
     	   <a href="{{ url_for("region", region=user.region) }}">{{user.region}}</a> 
     	{% else %}
@@ -11,11 +12,17 @@
 	    {% endif %}
     </td>
 
-    <td class="col-sm-4 text-center">
+    <td class="col-sm-3 text-center">
     	{% if user.main %}
             <a href="{{ url_for("character", character=user.main) }}">{{user.main}}</a>
         {% else %}
             Unchosen
+        {% endif %}
+    </td>
+
+    <td class="col-sm-3 text-center">
+        {% if user.trueskill.mu %}
+            {{user.trueskill.mu|round(4, 'common')}}
         {% endif %}
     </td>
 
