--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -94,25 +94,17 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse nav-collapse" id="navbar">
         <ul class="nav navbar-nav">
-          <li>
-            <a href="{{ url_for('about') }}">About</a>
-          </li>
-          <li>
-            <a href="{{ url_for('browse_tournaments') }}">Browse Tournaments</a>
-          </li>
-          <li>
-            <a href="{{ url_for('browse_users') }}">Browse Users</a>
-          </li>
-          <li>
-            <a href="{{ url_for('head_to_head') }}">Head to Head</a>
-          </li>
+          <li><a href="{{ url_for('about') }}">About</a></li>
+          <li><a href="{{ url_for('browse_regions') }}">Browse Regions</a></li>
+          <li><a href="{{ url_for('browse_tournaments') }}">Browse Tournaments</a></li>
+          <li><a href="{{ url_for('browse_users') }}">Browse Users</a></li>
+          <li><a href="{{ url_for('head_to_head') }}">Head to Head</a></li>
           <li>
             <form class="navbar-form" action="{{ url_for('search') }}" method="post" name="search">
               {{ g.search_form.hidden_tag() }}{{ g.search_form.search(size=12, class="form-control") }}
               <input type="submit" class="btn-primary form-control" value="Search">
             </form>
           </li>
-          <!-- /browse_regions, /browse_characters not valid routes in Version 1.0 -->
         </ul>
       </div>
       <!-- /.navbar-collapse -->
