--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -1,4 +1,4 @@
-<!-- A list of tournaments in the database-->
+<!-- A list of all Tournament objects in the database-->
 {% extends "base.html" %}
 
 {% block content %}
