--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -13,8 +13,9 @@
 			<thead>
 				<tr>
 					<th class="text-center"><h4><b>Date</h4></b></th>
-					<th class="text-center"><h4><b>Tournament</h4></b></th>
-					<th class="text-center"><h4><b>Entrants</h4></b></th>
+					<th class="text-center"><h4><b>Tournament</b></h4></th>
+					<th class="text-center"><h4><b>Entrants</b></h4></th>
+					<th class="text-center"><h4><b>Region</b></h4></th>
 				</tr>
 			</thead>
 
