--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -2,14 +2,24 @@
 {% extends "base.html" %}
 
 {% block content %}
+	<!-- Search results for Users -->
 	<div class="container">
 		<div class="panel panel-default">
 		<div class="panel-heading">
 			<h3><b>User results for "{{ query }}"</b></h3>
 		</div>
-
 		<div class="panel-body">
 			<table class="table bootstrap-datatable table-hover">
+				<thead>
+			    <tr>
+		        <th class="text-center"><h4><b>User</b></h4></th>
+			      <th class="text-center"><h4><b>Region</b></h4></th>
+			      <th class="text-center"><h4><b>Main</b></h4></th>
+			      <th class="text-center"><h4><b>Rating</b><h4></th>
+			      <!-- <th><h4><b>Secondaries</b></h4></th> -->
+			    </tr>
+			  </thead>
+
 				<body>
 				  {% for user in user_results %}
 				    {% include 'user_display.html' %}
@@ -19,13 +29,22 @@
 		</div>
 	</div>
 
+	<!-- Search results for Tournaments -->
 	<div class="panel panel-default">
 	<div class="panel-heading">
 		<h3><b> Tournaments named "{{ query }}" </b></h3>
 	</div>
-
 	<div class="panel-body">
 		<table class="table bootstrap-datatable table-hover">
+			<thead>
+				<tr>
+					<th class="text-center"><h4><b>Date</h4></b></th>
+					<th class="text-center"><h4><b>Tournament</b></h4></th>
+					<th class="text-center"><h4><b>Entrants</b></h4></th>
+					<th class="text-center"><h4><b>Region</b></h4></th>
+				</tr>
+			</thead>
+
 			<tbody>
 				{% for tournament in tournament_results %}
 					{% include 'tournament_display.html' %}
