--- a/app/templates/tournament_display.html
+++ b/app/templates/tournament_display.html
@@ -2,22 +2,26 @@
 
 {% if tournament.name != "Non-Tourney" %}
 <tr>
-	<td class="col-sm-4 text-center"><b>
+	<td class="col-sm-3 text-center"><b>
 	{% if tournament.date %}
-		{{ tournament.date }}
+		{{tournament.date}}
 	{% else %}
 		Date Unknown
 	{% endif %}
 	</b></td>
 
-	<td class="col-sm-4 text-center"><b><a href="{{ url_for("tournament", tournament_name=tournament.name)}}">{{tournament.name}}</a></b></td>
+	<td class="col-sm-3 text-center"><b><a href="{{ url_for("tournament", tournament_name=tournament.name)}}">{{tournament.name}}</a></b></td>
 	
-	<td class="col-sm-4 text-center"><b>
+	<td class="col-sm-3 text-center"><b>
 		{% if tournament.entrants != -1 %}
-			{{ tournament.entrants }}
+			{{tournament.entrants}}
 		{% else %}
 			Unknown
 		{% endif %}
 	</b></td>
+
+	<td class="col-sm-3 text-center">
+		<b>{{tournament.region}}</b>
+	</td>
 </tr>
 {% endif %}
