check_set_user and parse_challonge_info take optional region arguments as *args for processing during parse_challonge_run

--- a/app/templates/tournament_display.html
+++ b/app/templates/tournament_display.html
@@ -21,7 +21,11 @@
 	</b></td>
 
 	<td class="col-sm-3 text-center">
-		<b>{{tournament.region}}</b>
+		{% if tournament.region %}
+			<b><a href="{{ url_for("region", region=tournament.region) }}">{{tournament.region}}</a></b>
+		{% else %}
+			{{tournament.region}}
+		{% endif %}
 	</td>
 </tr>
 {% endif %}
