--- a/app/templates/region.html
+++ b/app/templates/region.html
@@ -46,6 +46,7 @@
 					<th class="text-center"><h4><b>Date</h4></b></th>
 					<th class="text-center"><h4><b>Tournament</h4></b></th>
 					<th class="text-center"><h4><b>Entrants</h4></b></th>
+					<th class="text-center"><h4><b>Region</b></h4></th>
 				</tr>
 			</thead>
 
