--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -45,7 +45,7 @@
   <!-- Table for displaying User's Tournament History -->
   <div class="panel panel-default">
   <div class="panel-heading">
-    <h2><b> {{ user.tag }}'s Tournament History </b></h2>
+    <h2><b> {{user.tag}}'s Tournament History </b></h2>
   </div>
   <div class="panel-body">
     <table class="table bootstrap-datatable table-condensed table-hover">
@@ -57,10 +57,11 @@
         </tr>
       </thead>
 
+      <!-- user_placements is dictionary of lists with keys tournament_name and list[0]=placement and list[1]=seed -->
       {% for tournament in user_placements %}
       <tr>
-        <td class="col-xs-6 col-sm-6 text-right"><b><a href="{{ url_for("tournament", tournament_name=tournament) }}">{{ tournament }}</a> - </b></td>
-        <td class="col-xs-6 col-sm-6 text-left"><b> {{ user_placements[tournament] }} </b></td>
+        <td class="col-xs-6 col-sm-6 text-right"><b><a href="{{ url_for("tournament", tournament_name=tournament) }}">{{ tournament}}</a> - </b></td>
+        <td class="col-xs-6 col-sm-6 text-left"><b>{{user_placements[tournament][0]}}</b> (seed: {{user_placements[tournament][1]}})</td>
       </tr>
       {% endfor %}
     </table>
@@ -70,7 +71,7 @@
   <!-- Table for displaying User's Sets -->
   <div class="panel panel-default">
   <div class="panel-heading">
-    <h2><b>{{ user.tag }}'s Set History</b></h2>
+    <h2><b>{{user.tag}}'s Set History</b></h2>
   </div>
   <div class="panel-body">
     <table class="table bootstrap-datatable table-hover">
