--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
+
 {% block content %}
 <div class="container">
   <header class="jumbotron">
-    <h1> {{ tournament.name }} </h1>
+    <h1> {{tournament.name}} </h1>
 
     <h2>
     {% if tournament.game_type %}
-      {{ tournament.game_type }}
+      {{tournament.game_type}}
     {% else %}
       Game Unknown
     {% endif %}
@@ -14,7 +15,7 @@
 
     <h2>
     {% if tournament.date %}
-      {{ tournament.date }}
+      {{tournament.date}}
     {% else %}
       Date Unknown
     {% endif %}
@@ -22,9 +23,9 @@
 
     <h2> 
     {% if tournament.entrants != -1 %}
-      {{ tournament.entrants }} Player {{ tournament.bracket_type }} 
+      {{tournament.entrants}} Player {{tournament.bracket_type}} 
     {% else %}
-      {{ tournament.bracket_type }}
+      {{tournament.bracket_type}}
     {% endif %}
     </h2>
   </header>
@@ -48,7 +49,7 @@
         {% for placement_info in placement_dict[placing] %}
           <tr>
             <td class="col-sm-6 text-right"><b>{{placing}}:</b></td>
-            <td class="col-sm-6 text-left"><a href="{{ url_for("user", tag=tag) }}"><b> {{placement_info[0]}} </b></a>(seed: {{placement_info[1]}})</td>
+            <td class="col-sm-6 text-left"><a href="{{url_for("user", tag=tag)}}"><b> {{placement_info[0]}} </b></a>(seed: {{placement_info[1]}})</td>
           </tr>
         {% endfor %}
       {% endfor %}
@@ -82,7 +83,11 @@
         <tr>
           <td></td>
           <td></td>
-          <td><h4><b>Round {{round}}</h4></b></td>
+          {% if round > 0 %}
+            <td class="text-center"><h4><b>WR {{round}}</h4></b></td>
+          {% else %}
+            <td class="text-center"><h4><b>LR {{round}}</h4></b></td>
+          {% endif %}
           <td></td>
           <td></td>
         </tr>
