--- a/app/templates/region.html
+++ b/app/templates/region.html
@@ -2,6 +2,35 @@
 
 {% block content %}
 	<div class="container">
+		<!-- AJAX Test
+		<head>
+			<script>
+				function loadXMLDoc()
+				{
+				var xmlhttp;
+				if (window.XMLHttpRequest)
+				  {// code for IE7+, Firefox, Chrome, Opera, Safari
+				  xmlhttp=new XMLHttpRequest();
+				  }
+				else
+				  {// code for IE6, IE5
+				  xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+				  }
+
+				xmlhttp.onreadystatechange=function()
+				  {
+				  if (xmlhttp.readyState==4 && xmlhttp.status==200)
+				    {
+				    document.getElementById("myDiv").innerHTML=xmlhttp.responseText;
+				    }
+				  }
+				xmlhttp.open("GET","url.txt",true);
+				xmlhttp.send();
+				}
+			</script>
+		</head>
+		-->
+
 		<div class="jumbotron">
 			<h1>{{region}}</h1>
 			<h2><b>Population:</b> {{current_region.users|length}}</h2>
@@ -26,6 +55,11 @@
 			  </thead>
 
 				<tbody>
+					<!--
+					<div id="myDiv"><h2>Let AJAX change this text</h2></div>
+					<button type="button" onclick="loadXMLDoc()">Change Content</button>
+					-->
+
 				  {% for user in current_region.users %}
 				    {% include 'user_display.html' %}
 				  {% endfor %}
