--- a/app/templates/user_display.html
+++ b/app/templates/user_display.html
@@ -15,6 +15,12 @@
     <td class="col-sm-3 text-center">
     	{% if user.main %}
             <a href="{{url_for("character", character=user.main)}}"><b>{{user.main}}</b></a>
+
+            {% set char_image_url_raw = ["/static/char_icons/", user.main, ".png"] %}
+            {% set char_image_url = char_image_url_raw|join %}
+            {{char_image_url}} <!-- Need to change .png filenames to match -->
+            <img src={{char_image_url}}, alt={{user.main}}>
+
         {% else %}
             Unchosen
         {% endif %}
