char_icon.html displays character .png file. Fixed uri for some images to match Character names

--- a/app/templates/browse_characters.html
+++ b/app/templates/browse_characters.html
@@ -18,7 +18,14 @@
 		  	<!-- simply prints all characters (strings) in characterlist -->
 			  {% for character in characterlist %}
 			    <tr>
-			    	<td><a href="{{ url_for("character", character=character) }}"><b>{{character}}</b></a></td>
+			    	<td>
+			    		<a href="{{ url_for("character", character=character) }}"><b>{{character}}</b></a>
+			    		
+			    		<!-- routed to from Character pages, character = string representing Character -->
+							{% set char_image_url_raw = ["/static/char_icons/", character, ".png"] %}
+							{% set char_image_url = char_image_url_raw|join %}
+							<img src="{{char_image_url}}", alt={{character}}>
+						</td>
 			    </tr>
 			  {% endfor %}
 			</table>
