/region now orders region's Users by trueskill.mu

--- a/app/templates/region.html
+++ b/app/templates/region.html
@@ -60,7 +60,7 @@
 					<button type="button" onclick="loadXMLDoc()">Change Content</button>
 					-->
 
-				  {% for user in current_region.users %}
+				  {% for user in region_userlist %}
 				    {% include 'user_display.html' %}
 				  {% endfor %}
 				</tbody>
