--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -11,16 +11,15 @@
 
     <p>If you are interested in this project and would like to contribute, contact the developers at <a href="mailto:smashstats@example.com"><b>smashstats@gmail.com</b></a>, or connect with us through our social media accounts.</p>
 
-    <p>Features planned for v2.0
+    <p>Features planned for future releases
     <ul>
-    	<li> ELO system </li>
-    	<li> Increased local and regional support </li>
+    	<li> Support for more regions </li>
     	<li> Tournament data from Liquipedia, SmashGG, as well as match data </li>
-    	<li> support for user-inputted and edited player profiles </li>
     </ul>
     </p>
-    <p class="text-center"> Support us! Donations help keep our server running.
-    </p>
+
+    <p class="text-center"> Support us! Donations help keep our server running.</p>
+    <!-- PayPal Donate Button -->
     <form class="text-center" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
     <input type="hidden" name="cmd" value="_s-xclick">
     <input type="hidden" name="hosted_button_id" value="7SZNGHVFNVF7W">
@@ -29,5 +28,22 @@
     </form>
 
   </header>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+        <h2><b>Frequently Asked Questions</b></h2>
+    </div>
+
+    <div class="panel-body">
+        <h4>How are rankings calculated?</h4>
+        <h4>How can I get my region here?</h4>
+        <h4>How do you handle players who enter multiple tournaments with different tags?</h4>
+        <h4>Why can't I have multiple mains?</h4>
+        <h4>How can I help? (user reporting)</h4>
+        <h4>What do the characters Multiple, Unchosen, and Random mean?</h4>
+        <h4>Why is [set I played] from [tournament] not on this list?</h4>
+    </div>
+  </div>
+
 </div>
 {% endblock %}
