parse_challonge_info automatically assigns region 'Global' if none provided. seed number in placement dictionaries only display if not None

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -38,10 +38,12 @@
         <h4>How are rankings calculated?</h4>
         <h4>How can I get my region here?</h4>
         <h4>How do you handle players who enter multiple tournaments with different tags?</h4>
-        <h4>Why can't I have multiple mains?</h4>
+        <h4>Why can't a player have multiple mains?</h4>
         <h4>How can I help? (user reporting)</h4>
         <h4>What do the characters Multiple, Unchosen, and Random mean?</h4>
         <h4>Why is [set I played] from [tournament] not on this list?</h4>
+        <h4>Why don't you display sponsor or team tags?</h4>
+        <h4>Who are the creators of SmashStats?</h4>
     </div>
   </div>
 
