--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -23,6 +23,7 @@
     <h3><b>Main:</b>
       {% if user.main %}
         <a href="{{url_for("character", character=user.main)}}">{{user.main}}</a>
+        {% set character_name = user.main %}
         {% include "char_icon.html" %}
       {% else %}
         Unchosen
